fixed footer and section not overlaping

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,10 @@ img {
     gap: var(--gutter);
 }
 
+.overlap-container {
+    margin-top: -2px;
+}
+
 @media(max-width: 767px) {
     .flex-container {
         flex-direction: column;
